# SingerTapApp

./: README.md  pyproject.toml  sample_config.json
tiktok_tap/: __init__.py  auth.py
tiktok_tap/schemas/: authorized_shops.json
